--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@types/node": "^16.18.40",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "bootstrap": "^5.3.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -39,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/seedrandom": "^3.0.5",
+    "@types/shuffle-seed": "^1.1.0",
+    "crypto-js": "^4.1.1"
   }
 }
